# IIITD-PYQs

./: README.md
ABIN/: ReadMe.txt
ABIN/ABIN 2021/: EndSem.docx  MidSem.docx
ADA/ADA 2026/More/: Presentation.pptx
BDMH/Bdmh 2024/: BIO543_midsem_rubric.doc  BIO543_quiz2_answers.doc
BE/: README.md
BE/BE_2023/: README.md
CG/CG 2023/Labs/lab0/code/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini  lab0
CG/CG 2023/Labs/lab0/code/shaders/: fshader.fs  vshader.vs
CG/CG 2023/Labs/lab0/code/src/: main.cpp  utils.cpp  utils.h
CG/CG 2023/Labs/lab01 - Intro to OpenGL Shaders/code/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini  lab1
CG/CG 2023/Labs/lab01 - Intro to OpenGL Shaders/code/shaders/: fshader.fs  vshader.vs
CG/CG 2023/Labs/lab02/code/: CMakeCache.txt  CMakeLists.txt  Lab2  Makefile  cmake_install.cmake  imgui.ini
CG/CG 2023/Labs/lab05 - Implementing Shaders/code/: CMakeLists.txt  lab5
CG/CG 2023/Labs/lab06 - Texture Mapping/code/: CMakeLists.txt  lab6  main.cpp
CG/CG 2023/Labs/lab07 - Normal Mapping/code/: CMakeLists.txt  lab7
CG/CG 2023/Labs/lab08 - Environment Mapping/code/: CMakeLists.txt  Lab07  build.sh
CG/CG 2023/Labs/lab08 - Environment Mapping/code/shaders/: fshaderCubemap.fs  fshaderSphere.fs  vshaderCubemap.vs  vshaderSphere.vs
CG/CG 2023/Labs/lab08 - Environment Mapping/code/src/: main.cpp  shape.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  utils.cpp  utils.h
CM/CM 2025/: CM_QUIZ3_Rubrics.docx  Midsem_CM_rubrics.docx
CO/: README.md
DBMS/DBMS 2026/: Practice Normalization.docx
DR/: Literature Review.txt
DR/assignments/: Assignment2_Bibliography.docx
DR/assignments/group assignment/: Conclusion-1.docx  Interactive Learning Preferences for Quantum Topics (Responses).xlsx
DR/lectures/: L1.pptx  L3.pptx  L4.pptx
DSA/DSA 2022/: CSE102 Answers to Q4 to Q11 End Sem.pptx  Q1_rubric.pptx  Q2 and Q3_rubric.pptx
DSP/: ReadME.txt
EEE/EEE 2024/: End Semester Examination Paper ( Solved ).docx  Mid Sem EEE Rubrics.docx
FF/FF 2023/: make_up_quiz_solutions.docx  quiz_1_answers.xlsx  quiz_1_variant_a_2023.docx  quiz_2_answers.xlsx
FF/FF 2024/: END_TERM_ANSWERS.xlsx  end_term_2024_VARIANT_I.docx
FF/FF 2025/: quiz_1_answers.xlsx  quiz_2_ans.xlsx  quiz_2_solutions.xlsx  quiz_3_ans.xlsx  quiz_4_solutions.docx
FOB/FOB 2024/: make.txt
GS/GS 2025/: readme.md
IP/IP 2023/: Quiz-2-Rubrics.pptx
InT/: ReadME.txt
M3/M3 2022/M3 Sec-A/Exams/: Endsem - correction.txt
MB/: README.md
MB/MB_2024/: README.md
MLBA/MLBA 2024/: MLBA2024_midsem_Rubrics.docx
MTL/MTL 2024/: mid_term (4).txt  quiz_1 (2).txt  quiz_2 (3).txt  quiz_3 (2).txt
NS/2025/: Midsem 2025
OS/OS 2023/Assignments/assignment-4/: sum.c
OS/OS 2023/Assignments/assignment-5/: matrix.cpp
OS/OS 2024/: make.txt
PNS/PNS 2024/: README.md
S&S/S&S 2023/A1/: A1.ipynb
S&S/S&S 2023/A2/: A2.ipynb
S&S/S&S 2023/A3/: A3.ipynb
S&S/S&S 2023/A4/: A4.ipynb
SML/SML 2024/: make.txt
VPM/VPM 2024/: quiz_2_variant_I.docx
(+27 files in other folders)
